# waltzer_etc

./: .gitignore  CHANGELOG  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  snr_waltzer.py  target_list_20250327.csv
waltzer_etc/: __init__.py  __main__.py  app_utils.py  gui_plotly.py  gui_popovers.py  gui_utils.py  gui_waltzer.py  plotly_interface.py  sample_snr.py  sed.py  snr_waltzer.py  target.py  utils.py  version.py  viewer_popovers.py
waltzer_etc/data/: background.txt  base_theme.css  jwst_tso_programs.csv  last_updated_nea.txt  last_updated_trexolist.txt  nea_data.txt  target_aliases.txt  tess_data.txt  trexolists.csv
waltzer_etc/data/bt_settl/: sed_files.txt
waltzer_etc/data/detectors/: waltzer_nir.cfg  waltzer_nuv.cfg  waltzer_vis.cfg
waltzer_etc/data/models/: sed_files.txt
waltzer_etc/data/phoenix/: .gitignore  sed_files.txt
waltzer_etc/extended/: __init__.py  extended_sources.py
